welcome.lessons.welcome.bat.bool1.IcyHot.scala.error
icyHot:2: error: ')' expected but '<-' found.
if((temp1*temp2)<-99) {
                ^icyHot:4: error: illegal start of simple expression
}
^